--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@
 <a class="file-title" href="intent://com.sec.android.app.myfiles/#Intent;scheme=android-app;end" data-wpel-link="internal"><i class="fa fa-caret-right"></i> Open <img src="https://easy-firmware.com/efrp/downloads/frp/images/myfiles.png" alt="Smart Switch App" height="16"> <span style="color:#000;">myfiles App</span></a>
 </div>
 </div>
+	<div class="row file-row">
+<div class="col-lg-12">
+<a class="file-title" href="intent://com.sec.android.app.myfiles/#Intent;scheme=android-app;end" data-wpel-link="internal"><i class="fa fa-caret-right"></i> Open <img src="https://easy-firmware.com/efrp/downloads/frp/images/myfiles.png" alt="Smart Switch App" height="16"> <span style="color:#000;">myfiles App</span></a>
+</div>
+</div>
 <div class="row file-row">
 <div class="col-lg-12">
 <a class="file-title" alt="File Shorts" height="16"> <span style="color:#000;">========For OLD ==========</span></a>
