--- a/index.html
+++ b/index.html
@@ -54,11 +54,18 @@
 <section class>
 <div class="container" style="margin-bottom:10px;">
 <div class="container" style="margin-bottom:10px;">
+	<div class="row file-row">
+<div class="col-lg-12">
+<a class="file-title" alt="File Shorts" height="16"> <span style="color:#000;">========ZEBRA========</span></a>
+</div>
+</div>
+	
 <div class="row file-row">
 <div class="col-lg-12">
 <a class="file-title" alt="File Shorts" height="16"> <span style="color:#000;">========Google Play========</span></a>
 </div>
 </div>
+	
 <div class="row file-row">
 <div class="col-lg-12">
 <a class="file-title" href="intent://Easy-Firmware.com.com#Intent;scheme=http;package=com.google.android.apps.searchlite;end" data-wpel-link="internal"><i class="fa fa-caret-right"></i> Open <img src="https://easy-firmware.com/efrp/downloads/frp/images/google-play.png" alt="Google Play" height="16"> <span style="color:#000;">Direct</span></a>
