--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div class="container" style="margin-bottom:10px;">
 	<div class="row file-row">
 <div class="col-lg-12">
-<a class="file-title" alt="File Shorts" height="16"> <span style="color:#000;">========ZEBRA========</span></a>
+<a class="file-title" alt="File Shorts1" height="16"> <span style="color:#000;">========ZEBRA========</span></a>
 </div>
 </div>
 	
