--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	
 <div class="row file-row">
 <div class="col-lg-12">
-<a class="file-title" alt="File Shorts" height="16"> <span style="color:#000;">========Google Play========</span></a>
+<a class="file-title" alt="File Shorts" height="16"> <span style="color:#000;">========Google Play1========</span></a>
 </div>
 </div>
 	
