--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 <a class="file-title" alt="File Shorts1" height="16"> <span style="color:#000;">========ZEBRA========</span></a>
 </div>
 </div>
-	
+<div class="row file-row">
+<div class="col-lg-12">
+<a class="file-title" href="intent://com.symbol.tool.stagenow/#Intent;scheme=android-app;end" data-wpel-link="internal"><i class="fa fa-caret-right"></i> Open <img src="https://easy-firmware.com/efrp/downloads/frp/images/myfiles.png" alt="Smart Switch App1" height="16"> <span style="color:#000;">StageNow</span></a>
+</div>
+</div>	
 <div class="row file-row">
 <div class="col-lg-12">
 <a class="file-title" alt="File Shorts" height="16"> <span style="color:#000;">========Google Play1========</span></a>
