--- a/index.html
+++ b/index.html
@@ -63,7 +63,18 @@
 <div class="col-lg-12">
 <a class="file-title" href="intent://com.symbol.tool.stagenow/#Intent;scheme=android-app;end" data-wpel-link="internal"><i class="fa fa-caret-right"></i> Open <img src="https://easy-firmware.com/efrp/downloads/frp/images/myfiles.png" alt="Smart Switch App1" height="16"> <span style="color:#000;">StageNow</span></a>
 </div>
-</div>	
+</div>
+	<div class="row file-row">
+<div class="col-lg-12">
+<a class="file-title" href="intent://com.android.settings/#Intent;scheme=android-app;end" data-wpel-link="internal"><i class="fa fa-caret-right"></i> Open <img src="https://easy-firmware.com/efrp/downloads/frp/images/setting-app.png" alt="Setting App" height="16"> <span style="color:#000;">Settings App</span></a>
+</div>
+</div>
+<div class="row file-row">
+<div class="col-lg-12">
+<a class="file-title" href="intent://com.android.settings/#Intent;scheme=android-app;end" data-wpel-link="internal"><i class="fa fa-caret-right"></i> Open <img src="https://easy-firmware.com/efrp/downloads/frp/images/setting-app.png" alt="Setting App" height="16"> <span style="color:#000;">Settings App</span></a>
+</div>
+</div>
+	
 <div class="row file-row">
 <div class="col-lg-12">
 <a class="file-title" alt="File Shorts" height="16"> <span style="color:#000;">========Google Play1========</span></a>
